--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,17 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!-- Default screen margins -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Default font sizes -->
+    <dimen name="font_size_huge">24dp</dimen>
+    <dimen name="font_size_large">18dp</dimen>
+    <dimen name="font_size_medium">17dp</dimen>
+    <dimen name="font_size_small">14dp</dimen>
+    <dimen name="font_size_tiny">12dp</dimen>
+
+    <!-- Albums -->
+    <dimen name="album_item_horizontal_margin">16dp</dimen>
+    <dimen name="album_item_vertical_margin">16dp</dimen>
+
 </resources>
