--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="album_placeholder_title">#666666</color>
     <color name="album_item_overlay">#33000000</color>
     <color name="album_item_separator">#999999</color>
     <color name="album_item_subtitle">#FFFFFF</color>
