Update Albums layout

--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -5,6 +5,7 @@
 
     <ListView
         android:id="@+id/list"
+        style="@style/AlbumListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
