--- a/app/src/main/res/layout/list_album_item.xml
+++ b/app/src/main/res/layout/list_album_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<ee.ajapaik.sorter.widget.FixedAspectRatioLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:aspectRatioHeight="0.75">
 
-    <ImageView
+    <ee.ajapaik.sorter.widget.WebImageView
         android:id="@+id/image_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -43,4 +43,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</ee.ajapaik.sorter.widget.FixedAspectRatioLayout>
