--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,8 @@
     <dimen name="album_item_vertical_margin">16dp</dimen>
 
     <!-- Profile -->
+    <dimen name="profile_item_height">32dp</dimen>
+    <dimen name="profile_item_horizontal_margin">16dp</dimen>
+    <dimen name="profile_item_vertical_margin">16dp</dimen>
 
 </resources>
