--- a/app/src/main/res/menu/menu_album.xml
+++ b/app/src/main/res/menu/menu_album.xml
@@ -1,6 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context="ee.ajapaik.sorter.AlbumActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_profile"
+        android:title="@string/action_profile"
+        android:icon="@drawable/ic_account_circle_white_36dp"
+        app:showAsAction="always" />
+
 </menu>
