--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -28,7 +28,8 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_cancel_white_48dp" />
 
                 <ImageButton
                     android:id="@+id/button_action_right"
@@ -36,7 +37,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_cancel_white_48dp" />
 
                 <ImageButton
                     android:id="@+id/button_action_other"
@@ -81,7 +83,7 @@
             android:layout_above="@id/layout_details">
 
             <ee.ajapaik.sorter.widget.WebImageView
-                android:id="@+id/image_background"
+                android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/none"
