--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,12 +32,17 @@
         <item name="android:paddingRight">@dimen/album_item_horizontal_margin</item>
         <item name="android:paddingBottom">@dimen/album_item_vertical_margin</item>
         <item name="android:textColor">@color/album_item_subtitle</item>
+        <item name="android:textColorLink">@color/album_item_subtitle</item>
         <item name="android:textSize">@dimen/font_size_medium</item>
     </style>
 
     <!-- Album -->
     <style name="AlbumInfoBox">
         <item name="android:background">@color/album_item_overlay</item>
+        <item name="android:paddingLeft">@dimen/album_item_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/album_item_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/album_item_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/album_item_vertical_margin</item>
     </style>
 
     <style name="AlbumInfoOverlay">
@@ -45,17 +50,12 @@
     </style>
 
     <style name="AlbumInfoTitleText" parent="@android:style/TextAppearance">
-        <item name="android:paddingLeft">@dimen/album_item_horizontal_margin</item>
-        <item name="android:paddingRight">@dimen/album_item_horizontal_margin</item>
-        <item name="android:paddingTop">@dimen/album_item_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/album_item_vertical_margin</item>
         <item name="android:textColor">@color/album_item_title</item>
         <item name="android:textSize">@dimen/font_size_huge</item>
     </style>
 
     <style name="AlbumInfoSubtitleText" parent="@android:style/TextAppearance">
-        <item name="android:paddingLeft">@dimen/album_item_horizontal_margin</item>
-        <item name="android:paddingRight">@dimen/album_item_horizontal_margin</item>
-        <item name="android:paddingBottom">@dimen/album_item_vertical_margin</item>
         <item name="android:textColor">@color/album_item_subtitle</item>
         <item name="android:textSize">@dimen/font_size_medium</item>
     </style>
@@ -70,6 +70,7 @@
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingBottom">@dimen/activity_horizontal_margin</item>
         <item name="android:textColor">@color/profile_subtitle</item>
+        <item name="android:textColorLink">@color/profile_subtitle</item>
         <item name="android:textSize">@dimen/font_size_large</item>
     </style>
 
