--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,12 @@
     <dimen name="album_item_horizontal_margin">16dp</dimen>
     <dimen name="album_item_vertical_margin">16dp</dimen>
 
+    <!-- Album -->
+    <dimen name="album_info_horizontal_margin">16dp</dimen>
+    <dimen name="album_info_vertical_margin">16dp</dimen>
+    <dimen name="album_overlay_horizontal_margin">8dp</dimen>
+    <dimen name="album_overlay_vertical_margin">8dp</dimen>
+
     <!-- Profile -->
     <dimen name="profile_item_height">32dp</dimen>
     <dimen name="profile_item_horizontal_margin">16dp</dimen>
