--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,31 +32,47 @@
         <item name="android:paddingRight">@dimen/album_item_horizontal_margin</item>
         <item name="android:paddingBottom">@dimen/album_item_vertical_margin</item>
         <item name="android:textColor">@color/album_item_subtitle</item>
-        <item name="android:textColorLink">@color/album_item_subtitle</item>
         <item name="android:textSize">@dimen/font_size_medium</item>
     </style>
 
     <!-- Album -->
+    <style name="AlbumActionButton">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textColor">@color/album_info_title</item>
+    </style>
+
+    <style name="AlbumOverlayButton">
+        <item name="android:paddingLeft">@dimen/album_overlay_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/album_overlay_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/album_overlay_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/album_overlay_vertical_margin</item>
+    </style>
+
     <style name="AlbumInfoBox">
-        <item name="android:background">@color/album_item_overlay</item>
-        <item name="android:paddingLeft">@dimen/album_item_horizontal_margin</item>
-        <item name="android:paddingRight">@dimen/album_item_horizontal_margin</item>
-        <item name="android:paddingTop">@dimen/album_item_vertical_margin</item>
-        <item name="android:paddingBottom">@dimen/album_item_vertical_margin</item>
+        <item name="android:background">@color/album_info_box</item>
+        <item name="android:paddingLeft">@dimen/album_info_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/album_info_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/album_info_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/album_info_vertical_margin</item>
     </style>
 
     <style name="AlbumInfoOverlay">
-        <item name="android:background">@color/album_item_overlay</item>
+        <item name="android:background">@color/album_info_overlay</item>
+        <item name="android:paddingLeft">@dimen/album_info_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/album_info_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/album_info_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/album_info_vertical_margin</item>
     </style>
 
     <style name="AlbumInfoTitleText" parent="@android:style/TextAppearance">
-        <item name="android:paddingBottom">@dimen/album_item_vertical_margin</item>
-        <item name="android:textColor">@color/album_item_title</item>
+        <item name="android:paddingBottom">@dimen/album_info_vertical_margin</item>
+        <item name="android:textColor">@color/album_info_title</item>
         <item name="android:textSize">@dimen/font_size_huge</item>
     </style>
 
     <style name="AlbumInfoSubtitleText" parent="@android:style/TextAppearance">
-        <item name="android:textColor">@color/album_item_subtitle</item>
+        <item name="android:textColor">@color/album_info_subtitle</item>
+        <item name="android:textColorLink">@color/album_info_subtitle</item>
         <item name="android:textSize">@dimen/font_size_medium</item>
     </style>
 
