--- a/app/src/main/res/layout/list_profile_item.xml
+++ b/app/src/main/res/layout/list_profile_item.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-more"
                 android:layout_width="fill_parent"
-                style="@style/ProfileItem"
-                android:orientation="horizontal">
+                style="@style/ProfileItem">
 
     <ee.ajapaik.sorter.widget.WebImageView
         android:id="@+id/image_icon"
@@ -33,8 +32,7 @@
             style="@style/ProfileItemSubtitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/text_title"
-            android:layout_toRightOf="@+id/text_title"
+            android:layout_below="@+id/text_title"
             android:text="" />
 
     </RelativeLayout>
