Update AlbumFragment layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="album_item_title">#FFFFFF</color>
 
     <!-- Album -->
-    <color name="album_info_box">#000000</color>
+    <color name="album_background">#000000</color>
     <color name="album_info_overlay">#66000000</color>
     <color name="album_info_subtitle">#FFFFFF</color>
     <color name="album_info_title">#FFFFFF</color>
