--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                style="@style/AlbumFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -8,9 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ee.ajapaik.sorter.widget.WebImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/none"
+            android:scaleType="fitCenter" />
+
         <RelativeLayout
             android:id="@+id/layout_details"
-            style="@style/AlbumInfoBox"
+            style="@style/AlbumInfoOverlay"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -81,14 +89,7 @@
             android:layout_alignParentTop="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/layout_details">
-
-            <ee.ajapaik.sorter.widget.WebImageView
-                android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/none"
-                android:scaleType="fitCenter" />
+            android:layout_above="@+id/layout_details">
 
             <Button
                 android:id="@+id/button_image"
