--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -11,8 +11,10 @@
 
         <ee.ajapaik.sorter.widget.WebImageView
             android:id="@+id/image"
+            android:adjustViewBounds="true"
+            android:layout_alignParentTop="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:contentDescription="@string/none"
             android:scaleType="fitCenter" />
 
