--- a/app/src/main/res/layout-v19/fragment_album.xml
+++ b/app/src/main/res/layout-v19/fragment_album.xml
@@ -14,7 +14,7 @@
             android:adjustViewBounds="true"
             android:layout_alignParentTop="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:contentDescription="@string/none"
             android:scaleType="fitCenter" />
 
