--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -9,14 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ee.ajapaik.sorter.widget.WebImageView
-            android:id="@+id/image"
-            android:adjustViewBounds="true"
-            android:layout_alignParentTop="true"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/none"
-            android:scaleType="fitCenter" />
+        <include layout="@layout/fragment_album_photo" />
 
         <RelativeLayout
             android:id="@+id/layout_details"
@@ -78,6 +71,7 @@
                 <TextView
                     android:id="@+id/text_subtitle"
                     style="@style/AlbumInfoSubtitleText"
+                    android:autoLink="all"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="" />
