--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -68,10 +68,9 @@
                     android:layout_height="wrap_content"
                     android:text="" />
 
-                <TextView
-                    android:id="@+id/text_subtitle"
+                <Button
+                    android:id="@+id/button_subtitle"
                     style="@style/AlbumInfoSubtitleText"
-                    android:autoLink="all"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="" />
