--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -1,4 +1,4 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="ee.ajapaik.sorter.AlbumActivity" tools:ignore="MergeRootFrame" />
+    tools:context="pics.sift.android.AlbumActivity" tools:ignore="MergeRootFrame" />
