--- a/app/src/main/res/layout/list_album_item.xml
+++ b/app/src/main/res/layout/list_album_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ee.ajapaik.sorter.widget.FixedAspectRatioLayout
+<pics.sift.android.widget.FixedAspectRatioLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:aspectRatioHeight="0.75">
 
-    <ee.ajapaik.sorter.widget.WebImageView
+    <pics.sift.android.widget.WebImageView
         android:id="@+id/image_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,4 +42,4 @@
 
     </RelativeLayout>
 
-</ee.ajapaik.sorter.widget.FixedAspectRatioLayout>
+</pics.sift.android.widget.FixedAspectRatioLayout>
