--- a/app/src/main/res/layout-v19/fragment_album_photo.xml
+++ b/app/src/main/res/layout-v19/fragment_album_photo.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/none"
+        android:src="@drawable/transparent"
         android:scaleType="fitCenter" />
 
 </merge>
