--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -13,13 +13,13 @@
 
         <RelativeLayout
             android:id="@+id/layout_details"
-            style="@style/AlbumInfoOverlay"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:id="@+id/layout_details_actions"
+                style="@style/AlbumInfoOverlayActions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -57,6 +57,7 @@
 
             <LinearLayout
                 android:id="@+id/layout_details_info"
+                style="@style/AlbumInfoOverlayInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
