--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,8 @@
 
     <!-- Album -->
     <color name="album_background">#000000</color>
-    <color name="album_info_overlay">#00000000</color>
+    <color name="album_info_overlay_actions">#00000000</color>
+    <color name="album_info_overlay_info">#66000000</color>
     <color name="album_info_subtitle">#FFFFFF</color>
     <color name="album_info_title">#FFFFFF</color>
 
