--- a/app/src/main/res/layout/list_album_item.xml
+++ b/app/src/main/res/layout/list_album_item.xml
@@ -17,6 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageButton
+            android:id="@+id/button_action"
+            android:background="@android:color/transparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <LinearLayout
             style="@style/AlbumItemOverlay"
             android:layout_width="match_parent"
