--- a/app/src/main/res/layout-v19/fragment_album_photo.xml
+++ b/app/src/main/res/layout-v19/fragment_album_photo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <pics.sift.android.widget.WebImageView
+    <pics.sift.app.widget.WebImageView
         android:id="@+id/image"
         android:adjustViewBounds="true"
         android:layout_alignParentTop="true"
