--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -91,6 +91,14 @@
         <item name="android:dividerHeight">@dimen/profile_item_divider</item>
     </style>
 
+    <style name="ProfileSeparator">
+        <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginBottom">@dimen/activity_vertical_margin</item>
+        <item name="android:background">@color/profile_separator</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">1dp</item>
+    </style>
+
     <style name="ProfileLinkText" parent="@android:style/TextAppearance">
         <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
@@ -113,6 +121,14 @@
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingBottom">@dimen/activity_horizontal_margin</item>
         <item name="android:textColor">@color/profile_subtitle</item>
+        <item name="android:textSize">@dimen/font_size_medium</item>
+    </style>
+
+    <style name="ProfileHintText" parent="@android:style/TextAppearance">
+        <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingBottom">@dimen/activity_horizontal_margin</item>
+        <item name="android:textColor">@color/profile_hint</item>
         <item name="android:textSize">@dimen/font_size_medium</item>
     </style>
 
