--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,6 +46,16 @@
         <item name="android:textColor">@color/album_info_title</item>
     </style>
 
+    <style name="AlbumFooterText" parent="@android:style/TextAppearance">
+        <item name="android:background">@color/album_footer_background</item>
+        <item name="android:paddingLeft">@dimen/album_info_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/album_info_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/album_info_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/album_info_vertical_margin</item>
+        <item name="android:textColor">@color/album_footer_text</item>
+        <item name="android:textSize">@dimen/font_size_large</item>
+    </style>
+
     <style name="AlbumOverlayButton">
         <item name="android:paddingLeft">@dimen/album_overlay_horizontal_margin</item>
         <item name="android:paddingRight">@dimen/album_overlay_horizontal_margin</item>
