--- a/app/src/main/res/menu/menu_albums.xml
+++ b/app/src/main/res/menu/menu_albums.xml
@@ -6,11 +6,18 @@
         android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
         android:icon="@drawable/ic_autorenew_white_36dp"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_favorites"
+        android:title="@string/action_favorites"
+        android:icon="@drawable/ic_favorite_white_36dp"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_profile"
         android:title="@string/action_profile"
         android:icon="@drawable/ic_account_circle_white_36dp"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
 
 </menu>
